[project]
name = "viai-sdk"
version = "0.0.1"
authors = [
  { name="Jamie Duncan", email="jamieduncan@google.com" },
]
description = "A Python SDK for the Google Cloud Visual Inspection AI product"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

dependencies = [
    "google-auth",
    "google-oauth",
    "google-cloud",
    "google-cloud-storage"
]

[project.optional-dependencies]
dev = [
    "nose2",
    "coverage",
    "bump2version"
]

[project.urls]
"Homepage" = "https://gitlab.com/jamieduncan1/viai-sdk"
"Bug Tracker" = "https://gitlab.com/jamieduncan1/viai-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

