[project]
name = "viai-sdk"
version = "0.1.15"
authors = [
  { name="Jamie Duncan", email="jamieduncan@google.com" },
]
description = "A Python SDK for the Google Cloud Visual Inspection AI product"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'License :: OSI Approved :: Apache Software License'
]

dependencies = [
    "google-auth",
    "google-oauth",
    "google-cloud",
    "google-cloud-storage"
]

[project.optional-dependencies]
dev = [
    "nose2",
    "coverage",
    "bump2version"
]

[project.urls]
"Homepage" = "https://github.com/google/viai-sdk"
"Bug Tracker" = "https://github.com/google/viai-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["img", "tests"]

